--- a/Practica-5-2/Views/Clientes/Create.cshtml
+++ b/Practica-5-2/Views/Clientes/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Practica_5_2.Cliente
+﻿@model Practica_5_2.Models.Clientes
 
 @{
     ViewBag.Title = "Crear Cliente";
@@ -6,62 +6,120 @@
 
 <h2>Crear</h2>
 
+<div class="container">
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
+        <!-- NOMBRES -->
+        <div class="row">
+            <div class="col-sm-1">
+                <h5>@Html.LabelFor(m => m.Nombres, htmlAttributes: new { @class = "control-label col-md-2" }) </h5>
+            </div>
+            <div class="col-sm-3">
+                @Html.TextBoxFor(m => m.Nombres, new { @class = "form-control", placeholder = "Nombres", required = "required" })
+                @Html.ValidationMessageFor(m => m.Nombres, "", new { @class = "text-danger" })
+            </div>
+        </div><br />
 
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Cliente</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nombres, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Nombres, new { htmlAttributes = new { @class = "form-control", required = "required" } })
-                @Html.ValidationMessageFor(model => model.Nombres, "", new { @class = "text-danger" })
+        <!-- APELLIDOS -->
+        <div class="row">
+            <div class="col-sm-1">
+                <h5>@Html.LabelFor(m => m.Apellidos, htmlAttributes: new { @class = "control-label col-md-2" }) </h5>
+            </div>
+            <div class="col-sm-3">
+                @Html.TextBoxFor(m => m.Apellidos, new { @class = "form-control", placeholder = "Apellidos", required = "required" })
+                @Html.ValidationMessageFor(m => m.Apellidos, "", new { @class = "text-danger" })
+            </div>
+        </div><br />
+
+        <!-- DIRECCION -->
+        <div class="row">
+            <div class="col-sm-1">
+                <h5>@Html.LabelFor(m => m.Direccion, htmlAttributes: new { @class = "control-label col-md-2" }) </h5>
+            </div>
+            <div class="col-sm-3">
+                @Html.TextBoxFor(m => m.Direccion, new { @class = "form-control", placeholder = "Direccion", required = "required" })
+                @Html.ValidationMessageFor(m => m.Direccion, "", new { @class = "text-danger" })
+            </div>
+        </div><br />
+
+        <!-- TELEFONO -->
+        <div class="row">
+            <div class="col-sm-1">
+                <h5>@Html.LabelFor(m => m.Telefono, htmlAttributes: new { @class = "control-label col-md-2" }) </h5>
+            </div>
+            <div class="col-sm-3">
+                @Html.TextBoxFor(m => m.Telefono, new { @class = "form-control", placeholder = "Telefono", required = "required" })
+                @Html.ValidationMessageFor(m => m.Telefono, "", new { @class = "text-danger" })
+            </div>
+        </div><br />
+
+        <!-- CEDULA -->
+        <div class="row">
+            <div class="col-sm-1">
+                <h5>@Html.LabelFor(m => m.Cedula, htmlAttributes: new { @class = "control-label col-md-2" }) </h5>
+            </div>
+            <div class="col-sm-3">
+                @Html.TextBoxFor(m => m.Cedula, new { @class = "form-control", placeholder = "Cedula", required = "required" })
+                @Html.ValidationMessageFor(m => m.Cedula, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Apellidos, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Apellidos, new { htmlAttributes = new { @class = "form-control", required = "required" } })
-                @Html.ValidationMessageFor(model => model.Apellidos, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        <br />
+        @*@Html.AntiForgeryToken()
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Direccion, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Direccion, new { htmlAttributes = new { @class = "form-control", required = "required" } })
-                @Html.ValidationMessageFor(model => model.Direccion, "", new { @class = "text-danger" })
-            </div>
-        </div>
+            <div class="form-horizontal">
+                <h4>Cliente</h4>
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Nombres, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Nombres, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+                        @Html.ValidationMessageFor(model => model.Nombres, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Telefono, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Telefono, new { htmlAttributes = new { @class = "form-control", required = "required" } })
-                @Html.ValidationMessageFor(model => model.Telefono, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Apellidos, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Apellidos, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+                        @Html.ValidationMessageFor(model => model.Apellidos, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Cedula, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Cedula, new { htmlAttributes = new { @class = "form-control", required = "required" } })
-                @Html.ValidationMessageFor(model => model.Cedula, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Direccion, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Direccion, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+                        @Html.ValidationMessageFor(model => model.Direccion, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Telefono, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Telefono, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+                        @Html.ValidationMessageFor(model => model.Telefono, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Cedula, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Cedula, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+                        @Html.ValidationMessageFor(model => model.Cedula, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+        *@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Crear" class="btn btn-primary" />
             </div>
         </div>
-    </div>
-}
+
+    }
+</div>
 
 <div>
     <a href="/Clientes/" class="btn btn-info">Regresar</a>
